# riakccs

./: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
am/: aminclude_static.am
build-aux/: config.h.in
docs/: Doxyfile  index.html
hooks/: install-hooks.sh  pre-commit
m4/: ax_am_macros_static.m4  ax_prog_splint.m4
man/: riakccs.3
src/kv/: rk.c  rk_parse.c  rk_parse.h  uri.c
src/riakccs/: api.c  api.h  comms.c  debug.c  debug.h  pb.c  pb.h
src/tests/: riak_net.c  rk_tests.sh  valgrind.riak_net.sh
src/tests/data/: test_search.json
